尝试解决bootBuildImage任务不开启GraalVM的本地编译，直接编译基于JVM的镜像