@@ -3,8 +3,8 @@ import org.springframework.boot.gradle.tasks.bundling.BootBuildImage
 import org.springframework.boot.gradle.tasks.bundling.BootJar
 
 plugins {
-    alias(libs.plugins.gradle.native)
     alias(libs.plugins.spring.boot)
+    alias(libs.plugins.gradle.native)
 }
 
 dependencies {
@@ -28,6 +28,23 @@ dependencies {
     implementation(project(":platform-commons:commons-core-starter"))
     implementation(project(":platform-boot-modules:system:system-impl"))
     implementation(project(":platform-boot-modules:system:system-security"))
+}
+
+tasks.named<BootJar>("bootJar") {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    archiveFileName.set("app.jar")
+    manifest {
+        attributes("Spring-Boot-Native-Processed" to "false")
+    }
+}
+
+tasks.named<BootBuildImage>("bootBuildImage") {
+    builder = "paketobuildpacks/builder-noble-java-tiny"
+    environment = mapOf(
+        "BP_JVM_VERSION" to "21",
+        "BP_NATIVE_IMAGE" to "false",
+        "BP_SPRING_AOT_ENABLED" to "false",
+    )
 }
 
 graalvmNative {
@@ -59,18 +76,4 @@ graalvmNative {
 
 tasks.withType<ProcessAot> {
     args("--spring.profiles.active=native")
-}
-
-tasks.named<BootJar>("bootJar") {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    archiveFileName.set("app.jar")
-}
-
-tasks.named<BootBuildImage>("bootBuildImage") {
-    builder = "bellsoft/buildpacks.builder:musl"
-    environment.put("JAVA_TOOL_OPTIONS", "-XX:+UseZGC")
-    environment.put("BP_SPRING_AOT_ENABLED", "false")
-    environment.put("BP_NATIVE_IMAGE", "false")
-    environment.put("BP_JVM_CDS_ENABLED", "true")
-    environment.put("BP_JVM_VERSION", "21")
 }
